@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.dbpedia.extraction</groupId>
-        <artifactId>main</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <groupId>org.dbpedia</groupId>
+        <artifactId>extraction</artifactId>
+        <version>3.8</version>
     </parent>
 
+    <groupId>org.dbpedia.extraction</groupId>
     <artifactId>scripts</artifactId>
-    <packaging>jar</packaging>
     <name>DBpedia Scripts</name>
 
     <build>
@@ -24,20 +22,28 @@
                 <configuration>
                     <!-- TODO configure a launcher for each script -->
                     <launchers>
-                        <!-- launcher>
-                         <id>MyScript</id>
-                         <mainClass>org.dbpedia.extraction.scripts.MyScript</mainClass>
-                         <jvmArgs>
-                           <jvmArg>-Xmx1024m</jvmArg>
-                         </jvmArgs>
-                       </launcher -->
                         <launcher>
                             <id>ResolveRedirects</id>
                             <mainClass>org.dbpedia.extraction.scripts.ResolveRedirects</mainClass>
                             <jvmArgs>
                                 <jvmArg>-Xmx4096m</jvmArg>
                             </jvmArgs>
-                            <!-- mvn scala:run -Dlauncher=ResolveRedirects "-DaddArgs=/data/en/redirects_en.nt|/data/en/mappingbased_properties_en.nt|/data/en/page_links_en.nt" -->
+                            <!-- ../run  ResolveRedirects /data/en/redirects_en.nt /data/en/mappingbased_properties_en.nt /data/en/page_links_en.nt -->
+                        </launcher>
+                        <launcher>
+                            <id>CreateFreebaseLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateFreebaseLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-Xms512m</jvmArg>
+                                <jvmArg>-Xmx4096m</jvmArg><!-- 4G is ok with CMS or G1, other GCs need >= 4.5G -->
+                                <!-- <jvmArg>-XX:+PrintGC</jvmArg> -->
+                                <!-- <jvmArg>-XX:+PrintGCTimeStamps</jvmArg> -->
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <!-- <jvmArg>-XX:+UseG1GC</jvmArg> --><!-- ~20% slower than CMS --> 
+                                <!-- <jvmArg>-XX:+PrintGCDetails</jvmArg> --><!-- not necessary with CMS, annoying with G1 -->
+                            </jvmArgs>
+                            <!-- ../run CreateFreebaseLinks false false /data/dbpedia .nt.gz freebase-links.nt.bz2 freebase-datadump-quadruples.tsv.bz2 -->
                         </launcher>
                     </launchers>
                 </configuration>
@@ -53,14 +59,16 @@
             <artifactId>core</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-        </dependency>
-
+        <!-- TODO: find a version in a public repo. -->
         <dependency>
             <groupId>org.openrdf</groupId>
             <artifactId>openrdf</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
         </dependency>
 
     </dependencies>
